@@ -1,6 +1,7 @@
 2009-xx-xx - release x.x.x
         - Remove XC command
         - New fastloader: ULoad Model 3
+        - Support reading raw directory ($ with secondary > 0)
 
 2009-09-27 - release 0.8.2
         - Bugfix: Prevent random storage corruption on FAT32 media
